Further fix > Plugin not showing sold certificates
When there is no sold certificates there was no indication by the system
outlining what is wrong.

--- a/css/plugin.css
+++ b/css/plugin.css
@@ -173,6 +173,7 @@ background: transparent url('../images/delivery_terms.png') no-repeat left 0.25e
 
 
 .down-arrow{
+cursor:pointer;
 width: 0px;
 height: 0px;
 border-style: solid;
@@ -185,6 +186,7 @@ _filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000');
 display:block;
 }
 .up-arrow{
+cursor:pointer;
 width: 0px;
 height: 0px;
 border-style: solid;
